# python_package_template

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  readme.org  requirements.txt  setup.cfg
hello_python/: read_config.py  simple.py  system_config.yaml
hello_python/cmd/: simple.py
hello_python/config/: system_config.yaml
tests/: test_simple.py
